[gd_scene load_steps=36 format=2]

[ext_resource path="res://Assets/Enemys/Cyquanox.gd" type="Script" id=1]
[ext_resource path="res://Assets/Enemys/Assets/Cyquanox.png" type="Texture" id=2]
[ext_resource path="res://Assets/Enemys/Sounds/Undertale - Sound Effects2.wav" type="AudioStream" id=3]
[ext_resource path="res://Assets/Enemys/Sounds/Koopa Shell Kick.wav" type="AudioStream" id=4]
[ext_resource path="res://Assets/Enemys/Sounds/Sonic.exe Ding SFX2.wav" type="AudioStream" id=5]
[ext_resource path="res://Assets/Enemys/Sounds/Skid.wav" type="AudioStream" id=6]
[ext_resource path="res://Assets/Enemys/Sounds/Stomp.wav" type="AudioStream" id=8]

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 43, 58 )

[sub_resource type="AtlasTexture" id=20]
flags = 4
atlas = ExtResource( 2 )
region = Rect2( 0, 0, 129, 116 )

[sub_resource type="AtlasTexture" id=21]
flags = 4
atlas = ExtResource( 2 )
region = Rect2( 129, 0, 129, 116 )

[sub_resource type="AtlasTexture" id=22]
flags = 4
atlas = ExtResource( 2 )
region = Rect2( 258, 0, 129, 116 )

[sub_resource type="AtlasTexture" id=23]
flags = 4
atlas = ExtResource( 2 )
region = Rect2( 387, 0, 129, 116 )

[sub_resource type="AtlasTexture" id=24]
flags = 4
atlas = ExtResource( 2 )
region = Rect2( 516, 0, 129, 116 )

[sub_resource type="AtlasTexture" id=25]
flags = 4
atlas = ExtResource( 2 )
region = Rect2( 645, 0, 129, 116 )

[sub_resource type="AtlasTexture" id=26]
flags = 4
atlas = ExtResource( 2 )
region = Rect2( 774, 0, 129, 116 )

[sub_resource type="AtlasTexture" id=27]
flags = 4
atlas = ExtResource( 2 )
region = Rect2( 0, 116, 129, 116 )

[sub_resource type="AtlasTexture" id=28]
flags = 4
atlas = ExtResource( 2 )
region = Rect2( 129, 116, 129, 116 )

[sub_resource type="AtlasTexture" id=29]
flags = 4
atlas = ExtResource( 2 )
region = Rect2( 258, 116, 129, 116 )

[sub_resource type="AtlasTexture" id=30]
flags = 4
atlas = ExtResource( 2 )
region = Rect2( 387, 116, 129, 116 )

[sub_resource type="AtlasTexture" id=31]
flags = 4
atlas = ExtResource( 2 )
region = Rect2( 129, 232, 129, 116 )

[sub_resource type="AtlasTexture" id=32]
flags = 4
atlas = ExtResource( 2 )
region = Rect2( 258, 232, 129, 116 )

[sub_resource type="AtlasTexture" id=33]
flags = 4
atlas = ExtResource( 2 )
region = Rect2( 387, 232, 129, 116 )

[sub_resource type="AtlasTexture" id=34]
flags = 4
atlas = ExtResource( 2 )
region = Rect2( 516, 232, 129, 116 )

[sub_resource type="AtlasTexture" id=35]
flags = 4
atlas = ExtResource( 2 )
region = Rect2( 645, 232, 129, 116 )

[sub_resource type="AtlasTexture" id=36]
flags = 4
atlas = ExtResource( 2 )
region = Rect2( 774, 232, 129, 116 )

[sub_resource type="AtlasTexture" id=37]
flags = 4
atlas = ExtResource( 2 )
region = Rect2( 0, 348, 129, 116 )

[sub_resource type="AtlasTexture" id=38]
flags = 4
atlas = ExtResource( 2 )
region = Rect2( 129, 348, 129, 116 )

[sub_resource type="AtlasTexture" id=39]
flags = 4
atlas = ExtResource( 2 )
region = Rect2( 516, 116, 129, 116 )

[sub_resource type="AtlasTexture" id=40]
flags = 4
atlas = ExtResource( 2 )
region = Rect2( 645, 116, 129, 116 )

[sub_resource type="AtlasTexture" id=41]
flags = 4
atlas = ExtResource( 2 )
region = Rect2( 774, 116, 129, 116 )

[sub_resource type="AtlasTexture" id=42]
flags = 4
atlas = ExtResource( 2 )
region = Rect2( 0, 232, 129, 116 )

[sub_resource type="SpriteFrames" id=1]
animations = [ {
"frames": [ SubResource( 20 ), SubResource( 21 ), SubResource( 22 ), SubResource( 23 ), SubResource( 24 ), SubResource( 25 ), SubResource( 26 ), SubResource( 27 ) ],
"loop": false,
"name": "Close",
"speed": 10.0
}, {
"frames": [ SubResource( 28 ), SubResource( 29 ), SubResource( 30 ) ],
"loop": false,
"name": "Death",
"speed": 10.0
}, {
"frames": [ SubResource( 31 ), SubResource( 32 ), SubResource( 33 ), SubResource( 34 ) ],
"loop": false,
"name": "Skid",
"speed": 8.0
}, {
"frames": [ SubResource( 35 ), SubResource( 36 ), SubResource( 37 ), SubResource( 38 ) ],
"loop": true,
"name": "Sprint",
"speed": 9.0
}, {
"frames": [ SubResource( 39 ), SubResource( 40 ), SubResource( 41 ), SubResource( 42 ) ],
"loop": true,
"name": "Walk",
"speed": 10.0
} ]

[sub_resource type="RectangleShape2D" id=5]
extents = Vector2( 48.5714, 11.4286 )

[sub_resource type="CircleShape2D" id=4]
radius = 71.4631

[sub_resource type="CircleShape2D" id=19]
radius = 508.604

[node name="Cyquanox" type="KinematicBody2D"]
scale = Vector2( 0.35, 0.35 )
collision_layer = 0
script = ExtResource( 1 )

[node name="MovementCollision" type="CollisionShape2D" parent="."]
position = Vector2( -2.85714, 12 )
shape = SubResource( 2 )

[node name="EnemySprite" type="AnimatedSprite" parent="."]
scale = Vector2( 2, 2 )
frames = SubResource( 1 )
animation = "Walk"
playing = true

[node name="HitWall" type="RayCast2D" parent="EnemySprite"]
position = Vector2( 22.2222, 8.88889 )
scale = Vector2( 0.5, 0.5 )
cast_to = Vector2( 10, 0 )
collision_mask = 40

[node name="HitFloor" type="RayCast2D" parent="EnemySprite"]
position = Vector2( 21.1111, 34.4444 )
scale = Vector2( 0.5, 0.5 )
cast_to = Vector2( 0, 60 )
collision_mask = 8

[node name="StompCollision" type="Area2D" parent="."]
position = Vector2( 0, -45.7143 )

[node name="StompCollision" type="CollisionShape2D" parent="StompCollision"]
position = Vector2( -2.85714, -13.6508 )
scale = Vector2( -0.778843, -0.778843 )
shape = SubResource( 5 )

[node name="HurtBox" type="Area2D" parent="."]
position = Vector2( -5.71429, 0 )

[node name="StompCollision" type="CollisionShape2D" parent="HurtBox"]
position = Vector2( 0, 11.4286 )
shape = SubResource( 4 )

[node name="DetectionRadius" type="Area2D" parent="."]

[node name="Radius" type="CollisionShape2D" parent="DetectionRadius"]
position = Vector2( 0, 2.85714 )
shape = SubResource( 19 )

[node name="SFX" type="Node" parent="."]

[node name="Skid" type="AudioStreamPlayer" parent="SFX"]
stream = ExtResource( 6 )
pitch_scale = 1.1

[node name="Stomp" type="AudioStreamPlayer" parent="SFX"]
stream = ExtResource( 8 )

[node name="ShellKick" type="AudioStreamPlayer" parent="SFX"]
stream = ExtResource( 4 )

[node name="Ding" type="AudioStreamPlayer" parent="SFX"]
stream = ExtResource( 5 )

[node name="Whoosh" type="AudioStreamPlayer" parent="SFX"]
stream = ExtResource( 3 )

[connection signal="animation_finished" from="EnemySprite" to="." method="_on_EnemySprite_animation_finished"]
[connection signal="body_entered" from="StompCollision" to="." method="_on_StompCollision_body_entered"]
[connection signal="body_entered" from="HurtBox" to="." method="_on_HurtBox_body_entered"]
[connection signal="body_entered" from="DetectionRadius" to="." method="_on_DetectionRadius_body_entered"]
[connection signal="body_exited" from="DetectionRadius" to="." method="_on_DetectionRadius_body_exited"]
